fixed scroll overflow

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -198,6 +198,7 @@ form p {
 .table_container {
     display: flex;
     height: 90%;
+    overflow-y: scroll;
 }
 /*result of table from back*/
 
